eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glenn-portfolio-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: $GLENN_PORTFOLIO_HOST
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: glenn-portfolio-service
                port:
                  number: 80
  tls:
    - hosts:
        - $GLENN_PORTFOLIO_HOST
      secretName: glenn-portfolio-cert
